# cwus

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  controller.h  loader.cpp  loader.h  main.cpp  resources.qrc
qml/: Main.qml
qml/components/: MarqueeText.qml
